# pyinstrument-flamegraph

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml  tox.ini
.github/workflows/: tox.yml
pyinstrument_flamegraph/: __init__.py  main.py
tests/: test_flamegraph.py
