[project]
name = "pyinstrument-flamegraph"
version = "0.0.1"
description = "Glue code between pyinstrument and flamegraph.pl"
requires-python = ">= 3.9"
dependencies = [
  "pyinstrument"
]

[project.optional-dependencies]
test = [
  "tox",
  "pytest"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"pyinstrument_flamegraph/flamegraph.pl" = "pyinstrument_flamegraph/flamegraph.pl"

[tool.hatch.build.hooks.custom]
